# legal-document-summarizer-clause-analyzer

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  policy_mapping.yaml
data/processed/: dataset_report.json  test_supervised.jsonl  validation_supervised.jsonl
docs/: ARCHITECTURE.md  HANDBOOK.md  README.md  ZERO_TO_HERO_STUDY_HANDBOOK.md  documentation_build_manifest.txt  documentation_source.md
docs/tutorials/: 01_problem_setup_and_legal_challenges.md  02_dataset_and_supervision_design.md  03_baselines_and_prompting_systems.md  04_finetuning_with_trl_peft_unsloth.md  05_evaluation_and_llm_judging.md  06_error_analysis_and_visualization.md  07_inference_workflow_and_examples.md  08_strict_run_validation_and_artifact_audit.md
notebooks/: 01_problem_setup_dataset.executed.ipynb  01_problem_setup_dataset.ipynb  02_baselines_prompting.executed.ipynb  02_baselines_prompting.ipynb  03_data_preparation_policy_mapping.executed.ipynb  03_data_preparation_policy_mapping.ipynb  04_finetuning_qlora.executed.ipynb  04_finetuning_qlora.ipynb  05_evaluation_and_judging.executed.ipynb  05_evaluation_and_judging.ipynb  06_error_analysis_and_visualization.executed.ipynb  06_error_analysis_and_visualization.ipynb  07_inference_workflow.executed.ipynb  07_inference_workflow.ipynb
scripts/: evaluate.py  execute_notebooks.py  generate_notebooks.py  prepare_data.py  run_all.py  run_baselines.py  run_inference.py  train_model.py  validate_strict_run.py
tests/: test_instruction_builder.py  test_metrics.py  test_policy_mapping.py  test_strict_inference.py
(+20 files in other folders)
