[project]
name = "legal-document-summarizer-clause-analyzer"
version = "0.1.0"
description = "Tutorial-first legal summarizer and clause analyzer with local fine-tuning and evaluation"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
  "accelerate>=1.8.1",
  "bitsandbytes>=0.45.0",
  "datasets>=3.6.0",
  "huggingface-hub>=0.34.0",
  "ipykernel>=6.29.5",
  "jupyter>=1.1.1",
  "loguru>=0.7.3",
  "matplotlib>=3.10.3",
  "networkx>=3.3",
  "nltk>=3.9.1",
  "numpy>=2.2.6",
  "ollama>=0.5.1",
  "pandas>=2.3.0",
  "peft>=0.15.0",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "pyyaml>=6.0.2",
  "rouge-score>=0.1.2",
  "sacrebleu>=2.5.1",
  "scikit-learn>=1.7.0",
  "scipy>=1.16.0",
  "seaborn>=0.13.2",
  "sentencepiece>=0.2.0",
  "torch>=2.7.1",
  "transformers>=4.52.4",
  "trl>=0.19.0",
  "evaluate>=0.4.3",
  "bert-score>=0.3.13",
  "tqdm>=4.67.1",
  "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/legal_clause_analyzer"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
